// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a global registry amid unrelated npm settings is used 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/global/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`a scoped registry without a global registry is rejected 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
▲  No registry entry found in the NPM configuration file Path: ./this-dir-exists-only-in-memfs/.npmrc
│
■  Authentication with Azure DevOps NPM registry failed. 😞
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`an initial forced authentication failure does not retry 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: yes)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
▲  Failed to get an authentication token.
│
■  Authentication with Azure DevOps NPM registry failed. 😞
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`an unexpected Error reports its Error cause 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
■  Inner test cause
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`an unexpected non-Error rejection is handled 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
■
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`an unknown Commander command is captured through cliAsync 1`] = `""`;

exports[`an unknown Commander command is captured through cliAsync 2`] = `"error: too many arguments for 'auth'. Expected 0 arguments but got 1: unknown-command."`;

exports[`auth command help text (useOptionAlias: false) 1`] = `
"
Usage: vsts-npm-auth-improved auth [options]
Authenticate on Windows using vsts-npm-auth NPM package
Options:
  -c, --config-path <paths>           Comma-separated paths to .npmrc config
                                      files
  -N, --non-interactive               Prevent vsts-npm-auth credential prompts
  -T, --target-config <path>          Path to the .npmrc that receives
                                      credentials (default: ~/.npmrc)
  -E, --expiration-minutes <minutes>  Positive integer token lifetime (default:
                                      129600 minutes)
  --read                              Request a token with Packaging (Read)
                                      scope
  --no-read                           Request a token with Packaging (Read &
                                      Write)
  --force                             Force authentication token acquisition
  --no-force                          Do not force authentication token
                                      acquisition
  -h, --help                          display help for command"
`;

exports[`auth command help text (useOptionAlias: true) 1`] = `
"
Usage: vsts-npm-auth-improved auth [options]
Authenticate on Windows using vsts-npm-auth NPM package
Options:
  -c, --config-path <paths>           Comma-separated paths to .npmrc config
                                      files
  -N, --non-interactive               Prevent vsts-npm-auth credential prompts
  -T, --target-config <path>          Path to the .npmrc that receives
                                      credentials (default: ~/.npmrc)
  -E, --expiration-minutes <minutes>  Positive integer token lifetime (default:
                                      129600 minutes)
  --read                              Request a token with Packaging (Read)
                                      scope
  --no-read                           Request a token with Packaging (Read &
                                      Write)
  --force                             Force authentication token acquisition
  --no-force                          Do not force authentication token
                                      acquisition
  -h, --help                          display help for command"
`;

exports[`auth command version (useOptionAlias: false) 1`] = `
"
<PACKAGE_VERSION>"
`;

exports[`auth command version (useOptionAlias: true) 1`] = `
"
<PACKAGE_VERSION>"
`;

exports[`auth failures cases (vsts-npm-auth returns 'config-file-not-found') 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
▲  NPM configuration file not found. Is the filepath correct?
│
■  Authentication with Azure DevOps NPM registry failed. 😞
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`auth failures cases (vsts-npm-auth returns 'credentials-not-required') 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
▲  The registry in the NPM configuration file doesn't require authentication
│
■  Authentication with Azure DevOps NPM registry failed. 😞
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`auth failures cases (vsts-npm-auth returns 'no-registry-entry-found') 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
▲  No registry entry found in the NPM configuration file.
│
■  Authentication with Azure DevOps NPM registry failed. 😞
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`auth failures cases (vsts-npm-auth returns 'unknown') 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  Some unexpected output
│
■  Authentication with Azure DevOps NPM registry failed. 😞
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`auth success cases (vsts-npm-auth returns 'already-have-credentials') 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  Valid credentials already exist in the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`auth success cases (vsts-npm-auth returns 'credentials-obtained') 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`combined read and force options are passed to vsts-npm-auth 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: yes)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`comma-separated configuration paths are trimmed and forwarded in order 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registries at https://pkgs.dev.azure.com/org/_packaging/client/npm/registry/, https://pkgs.dev.azure.com/org/_packaging/server/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`empty configuration path entries are rejected: ''   '' 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
■  Config paths must be a comma-separated list with no empty paths.
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`empty configuration path entries are rejected: '''' 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
■  Config paths must be a comma-separated list with no empty paths.
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`empty configuration path entries are rejected: '',./client/.npmrc'' 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
■  Config paths must be a comma-separated list with no empty paths.
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`empty configuration path entries are rejected: ''./client/.npmrc,'' 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
■  Config paths must be a comma-separated list with no empty paths.
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`empty configuration path entries are rejected: ''./client/.npmrc,,./server/.npmrc'' 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
■  Config paths must be a comma-separated list with no empty paths.
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`every configuration file is validated before authentication starts 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
▲  No registry entry found in the NPM configuration file Path: ./server/.npmrc
│
■  Authentication with Azure DevOps NPM registry failed. 😞
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`invalid expiration minutes are rejected: -1 1`] = `"error: option '-E, --expiration-minutes <minutes>' argument '-1' is invalid. Expiration minutes must be a positive integer."`;

exports[`invalid expiration minutes are rejected: 0 1`] = `"error: option '-E, --expiration-minutes <minutes>' argument '0' is invalid. Expiration minutes must be a positive integer."`;

exports[`invalid expiration minutes are rejected: 1.5 1`] = `"error: option '-E, --expiration-minutes <minutes>' argument '1.5' is invalid. Expiration minutes must be a positive integer."`;

exports[`invalid expiration minutes are rejected: 9007199254740992 1`] = `"error: option '-E, --expiration-minutes <minutes>' argument '9007199254740992' is invalid. Expiration minutes must be a safe positive integer."`;

exports[`invalid expiration minutes are rejected: Infinity 1`] = `"error: option '-E, --expiration-minutes <minutes>' argument 'Infinity' is invalid. Expiration minutes must be a positive integer."`;

exports[`invalid expiration minutes are rejected: abc 1`] = `"error: option '-E, --expiration-minutes <minutes>' argument 'abc' is invalid. Expiration minutes must be a positive integer."`;

exports[`multiple unknown vsts-npm-auth output lines are displayed in order 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  First unknown output line
│
●  Second unknown output line
│
●  Third unknown output line
│
■  Authentication with Azure DevOps NPM registry failed. 😞
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`npm configuration file not found 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
▲  NPM configuration file not found. Is the filepath correct? Path: ./this-dir-does-not-exist-in-memfs/.npmrc
│
■  Authentication with Azure DevOps NPM registry failed. 😞
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`npm configuration file without a registry defined 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
▲  No registry entry found in the NPM configuration file Path: ./this-dir-exists-only-in-memfs/.npmrc
│
■  Authentication with Azure DevOps NPM registry failed. 😞
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`npm configuration path (useConfigPathAlias: false) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`npm configuration path (useConfigPathAlias: true) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`retries once but still fails 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
▲  Failed to get an authentication token.
│
■  Authentication with Azure DevOps NPM registry failed. 😞
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`retries once with force token acquisition when vsts-npm-auth returns could-not-get-auth-token 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file (after retrying with forced token acquisition)
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`retry with force token acquisition keeps arguments 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registries at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/, https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: no)
│
●  Credentials will be saved to the NPM configuration file at ./credentials/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the NPM configuration file at ./credentials/.npmrc (after retrying with forced token acquisition)
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`token acquisition (force: false) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`token acquisition (force: true) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: yes)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`token scope (read: false) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`token scope (read: true) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`unexpected errors are handled 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
■  Unexpected test error
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`upstream auth options (useOptionAlias: false) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the NPM configuration file at ./credentials/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the NPM configuration file at ./credentials/.npmrc
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`upstream auth options (useOptionAlias: true) 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the NPM configuration file at ./credentials/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the NPM configuration file at ./credentials/.npmrc
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;
